ucb/source/ucp/tdoc/tdoc_stgelems.cxx
@@ -32,6 +32,7 @@
 #include <com/sun/star/reflection/ProxyFactory.hpp>
 #include <utility>
 
+#include "tdoc_docmgr.hxx"
 #include "tdoc_uri.hxx"
 
 #include "tdoc_stgelems.hxx"
@@ -615,10 +616,13 @@ OutputStream::removeEventListener(
 
 Stream::Stream(
             const uno::Reference< uno::XComponentContext > & rxContext,
+            rtl::Reference<OfficeDocumentsManager> const & docsMgr,
             const OUString & rUri,
             const uno::Reference< embed::XStorage >  & xParentStorage,
             const uno::Reference< io::XStream > & xStreamToWrap )
 : ParentStorageHolder( xParentStorage, Uri( rUri ).getParentUri() ),
+  m_docsMgr(docsMgr),
+  m_uri(rUri),
   m_xWrappedStream( xStreamToWrap ),
   m_xWrappedOutputStream( xStreamToWrap->getOutputStream() ), // might be empty
   m_xWrappedTruncate( m_xWrappedOutputStream, uno::UNO_QUERY ), // might be empty
@@ -872,6 +876,7 @@ void Stream::commitChanges()
             throw io::IOException(); // @@@
         }
     }
+    m_docsMgr->updateStreamDateModified(m_uri);
 }
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
